# JobApplicationAutomation

./: .gitignore  README.md  apply_freelance.py  apply_fulltime.py  config-kushal.yaml  docker-compose.yml  document_generator.py  md_to_pdf.py  portfolio_generator.py  requirements.txt
ResumeCoverLetterMaker/: application_orchestrator.py  apply_fulltime.py  compile_resume.py  document_generator.py  fetch_github_repos.py  main.py  my_github_projects.md  projects_config.py  pyproject.toml  requirements.txt  setup_env.sh
ResumeCoverLetterMaker/assets/: KushalSharma_Resume.tex  Resume-Kushal_Sharma-Java.md  Vanilla_Cover_Letter.tex  Vanilla_Freelance_Proposal.tex  applications.csv
ResumeCoverLetterMaker/utils/: latex.py  pdf.py  scraper.py
assets/: upwork_backend.txt
backend/: Dockerfile  pyproject.toml
backend/app/: automation_service.py  controller.py  database.py  main.py  models.py  repository.py  schemas.py  seeds.py  service.py  verify_seed.py
backend/app/scripts/: base.py  linkedin.py  workday.py
backend/app/services/: ai_service.py  ingestion.py
backend/app/utils/: config_loader.py  ollama_client.py
backend/migrations/: env.py
backend/migrations/versions/: 3e38756db5c6_init_job_data.py  8d1a83fc848d_add_job_status.py
docker_data/db/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  (+5 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
utils/: ai.py  github.py  ollama.py  pdf.py  pdf_parser.py  scraper.py
(+133 files in other folders)
